Text-align fix for blog pagination

--- a/wp-content/themes/wpst/assets/app/scss/interface/_pagination.scss
+++ b/wp-content/themes/wpst/assets/app/scss/interface/_pagination.scss
@@ -68,6 +68,7 @@
 
     @include respond-min($bp3) {
         font-size: 1.8rem;
+        text-align: left;
 
         &:after {
             content: "";
